<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/brown_100"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brown_50"
            >

            <TextView
                android:id="@+id/recipeListItem_NumSteps_TextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/servings"
                app:layout_constraintBottom_toBottomOf="@+id/recipeListItem_Servings_TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recipeListItem_NumSteps_TextView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/steps"
                app:layout_constraintBottom_toBottomOf="@+id/recipeListItem_NumSteps_TextView2"
                app:layout_constraintStart_toEndOf="@+id/recipeListItem_NumSteps_TextView2" />

            <TextView
                android:id="@+id/recipeListItem_NumSteps_TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"

                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/recipeListItem_ImageView"
                app:layout_constraintStart_toEndOf="@+id/recipeListItem_ImageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/ingredients"
                app:layout_constraintBottom_toBottomOf="@+id/ingredientListItem_Quantity_TextView"
                app:layout_constraintStart_toEndOf="@+id/ingredientListItem_Quantity_TextView" />

            <TextView
                android:id="@+id/ingredientListItem_Quantity_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"

                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/recipeListItem_Servings_TextView"
                app:layout_constraintStart_toEndOf="@+id/recipeListItem_ImageView"
                app:layout_constraintTop_toBottomOf="@+id/ingredientListItem_IngredientName_TextView" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/recipeListItem_ImageView"
                android:layout_width="64dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cheese_cake"
                app:civ_border_color="@color/blue_400"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ingredientListItem_IngredientName_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"

                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/recipeListItem_ImageView"
                app:layout_constraintTop_toTopOf="@+id/recipeListItem_ImageView" />

            <TextView
                android:id="@+id/recipeListItem_Servings_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/servings"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/recipeListItem_NumSteps_TextView2"
                app:layout_constraintEnd_toStartOf="@+id/recipeListItem_NumSteps_TextView4"
                app:layout_constraintTop_toTopOf="@+id/recipeListItem_NumSteps_TextView2"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>